--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -14,6 +14,7 @@
                     <th class="text-center" scope="col">Marca</th>
                     <th class="text-center" scope="col">Descripción</th>
                     <th class="text-center" scope="col">Categoría</th>
+                    <th class="text-center" scope="col">Ver</th>
                     <th class="text-center" scope="col">Editar</th>
                     <th class="text-center" scope="col">Eliminar</th>
                   </tr>
@@ -31,11 +32,17 @@
                     <td class="text-center" *ngIf="product.iduser == iduser && product.idcategoria == 4 && product.identrega == 1">Vehículos</td>
                             
                     <td class="text-center" *ngIf="product.iduser == iduser && product.identrega == 1">
-                        <button class="btn-hover tab color-5" mat-raised-button [routerLink]="['/products','edit',product.idproducto]"><mat-icon>edit</mat-icon></button>
+                        <button class="btn-hover tab color-9" mat-raised-button [routerLink]="['/products','detail',product.idproducto]"><mat-icon>remove_red_eye</mat-icon></button>
+                    </td>
+                    <td class="text-center" *ngIf="product.iduser == iduser && product.identrega == 1">
+                      <button class="btn-hover tab color-5" mat-raised-button [routerLink]="['/products','edit',product.idproducto]"><mat-icon>edit</mat-icon></button>
                     </td>
                     <td class="text-center" *ngIf="product.iduser == iduser && product.identrega == 1">
                         <button class="btn-hover tab color-11" mat-raised-button (click)="delete(product)"><mat-icon>close</mat-icon></button>
                     </td>
+                  </tr>
+                  <tr>
+                    No mas artículos.
                   </tr>
                   
                 </tbody>
@@ -76,6 +83,9 @@
                   </td>
                   
                 </tr>
+                <tr>
+                  No mas artículos.
+                </tr>
                 
               </tbody>
             </table>
@@ -114,6 +124,9 @@
                     <button class="btn-hover tab color-5" mat-raised-button [routerLink]="['/products','edit',product.idproducto]"><mat-icon>edit</mat-icon></button>
                 </td>
                 
+              </tr>
+              <tr>
+                No mas artículos.
               </tr>
               
             </tbody>
