--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -35,35 +35,42 @@
             </mat-card>
         </div>
         <div class="col-lg-8 col-md-6 col-sm-12">
-            <mat-card class="donante">
+            <mat-card class="donante" *ngIf="userid != products.iduser">
                 <mat-card-header class="donante-header">
                     <mat-card-title >Contacta al Donante</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <form [formGroup]="form">
-                        <mat-form-field appearance="outline">
-                            <mat-label>Escríbe...</mat-label>
-                            <input class="mensaje" required matInput formControlName="comentario">
-                        </mat-form-field>
-                    </form>
+                    <div class="row">
+                        <div class="col-10">
+                            <form [formGroup]="form">
+                                <mat-card class="card-content-search">
+                                    <input class="mensaje animate__animated animate__rollIn " matInput required placeholder="Escribe..." formControlName="comentario">
+                                </mat-card>
+                            </form>
+                        </div>
+                        <div class="col-2 send">
+                            <button (click)="submit()" mat-raised-button><mat-icon>send</mat-icon></button>
+                        </div>
+                    </div>
+
                 </mat-card-content>
-                <mat-card-actions>
-                    <button (click)="submit()" mat-raised-button><mat-icon>send</mat-icon></button>
-                </mat-card-actions>
+            
             </mat-card>
 
-            <mat-card class="donante">
+            <mat-card class="donante" *ngIf="userid == products.iduser && coments.length == 0">
                 <mat-card-header class="donante-header">
-                    <mat-card-title>Mensajes</mat-card-title>
+                    <mat-card-title>Aún no hay mensajes</mat-card-title>
                 </mat-card-header>
-            </mat-card>
-            
-            <mat-card class="donante" *ngFor="let coment of coments">
-                <mat-card-title>Por {{coment.iduser}}</mat-card-title>
-                <mat-card-content>
-                    <p>{{coment.comentario}}</p>
-                </mat-card-content>
-            </mat-card>
+            </mat-card> 
+
+            <div *ngFor="let coment of coments.reverse()">
+                <mat-card class="donante" *ngIf="userid == products.iduser">
+                    <mat-card-title class="header-comentario">Por {{coment.iduser}}</mat-card-title>
+                    <mat-card-content>
+                        <p>{{coment.comentario}}</p>
+                    </mat-card-content>
+                </mat-card>
+            </div>
         </div>
     
 </div>
