--- a/src/app/products/products-all/products-all.component.html
+++ b/src/app/products/products-all/products-all.component.html
@@ -30,6 +30,9 @@
                             <p *ngIf="product.idcategoria == 2">Ropa Infantil</p>
                             <p *ngIf="product.idcategoria == 3">Ropa Mujeres</p>
                             <p *ngIf="product.idcategoria == 4">Vehículos</p>
+                            <p *ngIf="product.idcategoria == 5">Hogar</p>
+                            <p *ngIf="product.idcategoria == 6">Ropa Hombres</p>
+                            <p *ngIf="product.idcategoria == 7">Muebles</p>
                         </div>
 
                     </div>
