--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -26,6 +26,9 @@
                                 <p *ngIf="products.idcategoria == 2">Ropa Infantil</p>
                                 <p *ngIf="products.idcategoria == 3">Ropa Mujeres</p>
                                 <p *ngIf="products.idcategoria == 4">Vehículos</p>
+                                <p *ngIf="products.idcategoria == 5">Hogar</p>
+                                <p *ngIf="products.idcategoria == 6">Ropa Hombres</p>
+                                <p *ngIf="products.idcategoria == 7">Muebles</p>
                             </div>
     
                         </div>
