--- a/src/app/shared/components/toolbar/toolbar.component.css
+++ b/src/app/shared/components/toolbar/toolbar.component.css
@@ -22,6 +22,11 @@ mat-toolbar{
     color: white !important;
 }
 
+.logo{
+    width: 80px;
+    height: fit-content;
+}
+
 @media (max-width: 800px) {
     .big {
       display: none !important;
