--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -45,7 +45,7 @@
                     </td>
                   </tr>
                   <tr>
-                    No mas artículos.
+                    No mas artículos...
                   </tr>
                   
                 </tbody>
