--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -1,6 +1,6 @@
 <mat-card class= "row animate__animated animate__backInDown">
     <div class="animate__animated animate__backInDown col cont">
-        <img  mat-card-img src="http://192.168.1.12:8000{{img}}">
+        <img  mat-card-img src="{{img}}">
     </div>
     <div class="col">
         <mat-card-title>Editar Artículo:</mat-card-title>
