--- a/src/app/products/product-detail/product-detail.component.css
+++ b/src/app/products/product-detail/product-detail.component.css
@@ -121,3 +121,14 @@ mat-card-content{
     border-radius: 15px;
     width: 100%;
 }
+
+.but{
+    box-shadow: rgba(136, 172, 243, 0.25) 0px 10px 30px, rgba(0, 0, 0, 0.03) 0px 1px 1px,
+    rgba(47, 62, 96, 0.01) 0px 10px 20px, rgba(76, 102, 148, 0.13) 0px 1px 3px;
+}
+
+@media (max-width: 990px) {
+    .but{
+        width: 100%;
+    }
+}
