--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -44,15 +44,15 @@
                 </mat-card-header>
                 <mat-card-content>
                     <div class="row">
-                        <div class="col-10">
+                        <div class="col-lg-10 col-sm-12">
                             <form [formGroup]="form">
                                 <mat-card class="card-content-search">
-                                    <input class="mensaje animate__animated animate__rollIn " matInput required placeholder="Escribe..." formControlName="comentario">
+                                    <input #comentario class="mensaje animate__animated animate__rollIn " matInput required placeholder="Escribe..." formControlName="comentario">
                                 </mat-card>
                             </form>
                         </div>
-                        <div class="col-2 send">
-                            <button (click)="submit()" mat-raised-button><mat-icon>send</mat-icon></button>
+                        <div class="col-lg-2 col-sm-12 send">
+                            <button (click)="submit()" class="but" mat-raised-button><mat-icon>send</mat-icon></button>
                         </div>
                     </div>
 
