--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -8,10 +8,10 @@
 <div class=" col-sm-4 col-md col-sm-4  col-12 col">
     <h5 class="headin5_amrc col_white_amrc pt2">Contáctanos</h5>
     <!--headin5_amrc-->
-    <p class="mb10">Nuestras oficinas se encuentran en Reparto San Juan. De la Iglesia Santa Martha 2 cuadras arriba, 3 cuadras al sur</p>
-    <p><i class="fa fa-location-arrow"></i>Telegram: 5458-4585</p>
-    <p><i class="fa fa-phone"></i>Línea Fija: 2260-2177</p>
-    <p><i class="fa fa fa-envelope"></i>Correo: chunches_com@gmail.com</p>
+    <p class="mb10">Nuestras oficinas se encuentran en Carretera Sur KM 12.</p>
+    <p><i class="fa fa-location-arrow"></i>   Telegram: 5458-4585</p>
+    <p><i class="fa fa-phone"></i>   Línea Fija: 2260-2177</p>
+    <p><i class="fa fa fa-envelope"></i>   Correo: chunches_com@gmail.com</p>
 
 
 </div>
@@ -36,7 +36,7 @@
 
 <div class="container">
 <!--foote_bottom_ul_amrc ends here-->
-<p class="text-center">Copyright @2021 | Elaborado por: <a href="#">Arq Dev Team</a></p>
+<p class="text-center">Copyright @2021 | Elaborado por: <a href="#">Eduardo Castellón (C^2)</a></p>
 
 <ul class="social_footer_ul">
 <li><a href="/login"><i class="fab fa-facebook-f"></i></a></li>
