--- a/src/app/shared/components/register/register.component.html
+++ b/src/app/shared/components/register/register.component.html
@@ -30,7 +30,7 @@
 
                 <p>
                     <mat-form-field appearance="outline">
-                        <mat-label>Escribe tu Contraseña</mat-label>
+                        <mat-label>Contraseña +8 letras y números</mat-label>
                         <input required type="password" matInput formControlName="password">
                         
                     </mat-form-field>
