--- a/src/app/products/product-add/product-add.component.html
+++ b/src/app/products/product-add/product-add.component.html
@@ -55,7 +55,7 @@
             </form>
         </mat-card-content>
         <mat-card-actions>
-            <button (click)="submit()" mat-raised-button class="btn-hover color-5">Agregar</button>
+            <button (click)="submit()" [disabled]="isDisabled" mat-raised-button class="btn-hover color-5">Agregar</button>
             <button (click)="cancel()" mat-raised-button class="btn-hover color-11">Cancelar</button>
         </mat-card-actions>
     </div>
